gl33-master/src/test/deca/context/invalid/other/affectation_float_string.deca
// Invalid test
// Affectation d'un flottant à un string

{
   float x;
   String s;

   s = x;
   s = 1.2;
}
